--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -190,7 +190,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
 						<a href="/blog/{{i.slug}}"><div class="latest-news-bg news-bg-1">
-							<img src="/{{i.img}}" height="200px" width="350px" alt="">
+							<img src="/{{i.img}}"  alt="">
 						</div></a>
 						<div class="news-text-box">
 							<h3><a href="/blog/{{i.slug}}">{{i.title}}</a></h3>
@@ -208,7 +208,7 @@
 				
 			</div>
 			<div class="row">
-				<div class="col-lg-12 text-center">
+				<div class="col-lg-12 text-center mt-3">
 					<a href="/blog" class="boxed-btn">More News</a>
 				</div>
 			</div>
